[package]
name = "chat-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = {version="4.3", features = ["rustls"]}
actix-ws = "0.2.5"
awc = "3"
rustls = "0.20.2"
rustls-pemfile = "1"

env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
tokio = {  version = "1.24.2", features = ["rt", "time", "macros"] }
actix-web-actors = "4.2.0"
actix = "0.13.0"
rand = "0.8.5"
url = "2.3.1"
tokio-stream = "0.1.14"
serde = { version="1.0.163", features = ["derive"]}
json = "0.12.4"
serde_json = "1.0.96"
turn = "0.6.1"
webrtc-util = { version="0.7.0", default-features = false, features = ["conn", "vnet"]}
